kubernetes/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1
    spec:
      containers:
      - name: microservice1
        image: mar26mal33oua00liki/microservices1:latest

        ports:
        - containerPort: 3001
