kubernetes/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice2
  template:
    metadata:
      labels:
        app: microservice2
    spec:
      containers:
      - name: microservice2
        image: mar26mal33oua00liki/microservices2:latest
        ports:
        - containerPort: 3002
