kubernetes/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice1-service
spec:
  type: NodePort
  selector:
    app: microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      nodePort: 30000
