kubernetes/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice2-service
spec:
  type: NodePort
  selector:
    app: microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
      nodePort: 30002
